--- a/src/main/resources/templates/usuario/administrador/homeAdministrador.html
+++ b/src/main/resources/templates/usuario/administrador/homeAdministrador.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- CSS -->
+    <link th:href="@{css/estilos.css}" rel="stylesheet">
     </head>
     <body>
-        <div>TODO write content</div>
+        
+        <header>
+            <h1>Recepción de Equipos Administrador</h1>
+        </header>
+        
+        <main>
+            <div>
+                <h3>Bienvenidos a la Home de Recepción de Equipos</h3>
+            </div>
+        </main>
+        
+        <footer>
+            <p>Developers 2026 - All Right Reserved</p>
+        </footer>
     </body>
 </html>
