Agrego el Controlador para Inicio de Sesión y Registro con sus respectivos HTML

--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -10,14 +10,12 @@
     <body>
         
         <header>
-            <h1>Recepción de Equipos - HOME</h1>
-            <a th:href="@{/usuario/iniciarSesion}">Iniciar Sesión</a>
-            <a th:href="@{/usuario/registro}">Registro</a>
+            <h1>Recepción de Equipos - REGISTRO</h1>
         </header>
         
         <main>
             <div>
-                <h3>Bienvenidos a la Home de Recepción de Equipos</h3>
+                <h3>Bienvenidos al REGISTRO de Recepción de Equipos</h3>
             </div>
         </main>
         
