--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -7,3 +7,29 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     Author     : elavi
 */
 
+body{
+    background-color: #0d47a1;
+    color: lavender;
+    font-family: "Krona One", serif;
+}
+
+strong{
+    color: #22D4FD;
+}
+
+footer{
+    background-color: rgb(37, 37, 91);
+    color: blanchedalmond;
+    
+}
+
+a{
+    color-scheme: black, white;
+}
+
+ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
