--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -137,3 +137,88 @@ body {
     flex-wrap: wrap;
     align-items: center;
 }
+
+
+/* Estilos Iniciar Sesión */
+
+.contenedor-formulario {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.formulario {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+.contenedor-img-iniciarSesion {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-iniciarSesion {
+    display: flex;
+    width: 250px;
+    height: 250px;
+}
+
+.contenedor-tarjeta {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100px;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #f4f4f4;
+}
+
+.tarjeta {
+    display: flex;
+    justify-content: center;
+    color: black;
+    width: 100%;
+    margin-top: 15px;
+    box-shadow: 0 10px 10px #a3a4a3;
+    height: 45px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.inp {
+    margin-left: 15px;
+    width: 300px;
+    height: 30px;
+}
+
+.lab {
+    align-items: center;
+    font-size: 20px;
+    
+}
+
+
+/* Estilos Generales */
+
+.mrt-30 {
+    margin-top: 30px;
+}
+
+
+
+.w-150 {
+    width: 150px;
+}
