Agrego cambios en el Formulario Iniciar Sesion

--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -26,11 +26,11 @@
                 <div class="contenedor-tarjeta">
                     <div class="tarjeta">
                         <label for="email" class="lab"> Email: </label>
-                        <input type="email" class="inp" id="email" name="email" placeholder="Ingrese su email"
-                            required autocomplete="off">
+                        <input type="email" class="inp" id="email" name="email" placeholder="Ingrese su email" required
+                            autocomplete="off">
                     </div>
                 </div>
-                
+
                 <div class="contenedor-tarjeta mrt-30">
                     <div class="tarjeta">
                         <label for="contrasena" class="lab"> Contraseña:</label>
@@ -39,13 +39,13 @@
                     </div>
                 </div>
 
-                <div class="">
-                    <div class="">
-                        <button type="submit" class="btn btn-dark"> <span class="glyphicon glyphicon-ok"></span>
-                            Ingresar</button>
-                    </div>
+                <div class="contenedor-boton mrt-30">
+
+                    <button type="submit" class="boton"> <span class="glyphicon glyphicon-ok"></span>
+                        Ingresar</button>
+
                 </div>
-                <div class="centrado">
+                <div class="mrt-30">
                     <a class="black" th:href="@{/email/recuperarContrasena}">¿Olvidaste la contraseña?</a>
                 </div>
 
