--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -207,7 +207,22 @@ body {
 .lab {
     align-items: center;
     font-size: 20px;
-    
+}
+
+.contenedor-boton {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.boton {
+    color: rgb(255, 255, 255);
+    background-color: #201e1e;
+    width: 120px;
+    height: 45px;
+    border-radius: 5px;
 }
 
 
@@ -217,7 +232,10 @@ body {
     margin-top: 30px;
 }
 
-
+a {
+    text-decoration: none;
+    color: #fff;
+}
 
 .w-150 {
     width: 150px;
