--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -163,6 +163,7 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
+    margin-top: 15px;
 }
 
 .img-iniciarSesion {
@@ -175,7 +176,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    height: 100px;
+    height: 140px;
     padding: 20px;
     justify-content: center;
     align-items: center;
@@ -183,6 +184,7 @@ body {
     border: 1px solid transparent;
     border-radius: 10px;
     box-shadow: 0 0 10px #f4f4f4;
+    color: #000;
 }
 
 .tarjeta {
@@ -191,22 +193,32 @@ body {
     color: black;
     width: 100%;
     margin-top: 15px;
-    box-shadow: 0 10px 10px #a3a4a3;
+    box-shadow: 10px 10px 10px #a3a4a3;
     height: 45px;
+    align-items: center;
     border: none;
     border-radius: 10px;
     padding: 10px;
 }
 
-.inp {
-    margin-left: 15px;
-    width: 300px;
-    height: 30px;
-}
-
-.lab {
+/* label-iniciar-sesion*/
+.lab-iniciar-sesion {
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
     font-size: 20px;
+    width: 100%;
+    box-shadow: 0px 1px 0px 0px #000;
+}
+
+/* input-iniciar-sesion */
+.inp-iniciar-sesion {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 15px;
+    width: 100%;
+    height: 30px;
+    border: none;
 }
 
 .contenedor-boton {
@@ -239,4 +251,12 @@ a {
 
 .w-150 {
     width: 150px;
+}
+
+.w-20 {
+    width: 20px;
+}
+
+w-100 {
+    width: 100%;
 }
