--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -17,34 +17,37 @@
     <main>
         <div class="contenedor-formulario">
 
+            <h1 class="mrt-30">Iniciar Sesión</h1>
+
             <div class="contenedor-img-iniciarSesion">
                 <img class="img-iniciarSesion" th:src="@{/imagenes/iniciarSesion.png}" alt="login">
             </div>
 
-            <form class="formulario" th:action="@{/usuario/acceder}" method="post">
+
+
+            <form class="formulario mrt-30" th:action="@{/usuario/acceder}" method="post">
 
                 <div class="contenedor-tarjeta">
+                    <label for="email" class="lab-iniciar-sesion"> Email: </label>
                     <div class="tarjeta">
-                        <label for="email" class="lab"> Email: </label>
-                        <input type="email" class="inp" id="email" name="email" placeholder="Ingrese su email" required
-                            autocomplete="off">
+                        <input type="email" class="inp-iniciar-sesion" id="email" name="email"
+                            placeholder="Ingrese su email" required autocomplete="off">
                     </div>
                 </div>
 
                 <div class="contenedor-tarjeta mrt-30">
+                    <label for="contrasena" class="lab-iniciar-sesion"> Contraseña:</label>
                     <div class="tarjeta">
-                        <label for="contrasena" class="lab"> Contraseña:</label>
-                        <input type="contrasena" class="inp" id="contrasena" name="password"
+                        <input type="contrasena" class="inp-iniciar-sesion" id="contrasena" name="password"
                             placeholder="Ingrese su contraseña" required>
                     </div>
                 </div>
 
                 <div class="contenedor-boton mrt-30">
-
                     <button type="submit" class="boton"> <span class="glyphicon glyphicon-ok"></span>
                         Ingresar</button>
-
                 </div>
+                
                 <div class="mrt-30">
                     <a class="black" th:href="@{/email/recuperarContrasena}">¿Olvidaste la contraseña?</a>
                 </div>
