--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -15,13 +15,54 @@
     <div th:insert="~{usuario/templateUsuario.html::header}" th:if="${sesion==null}"></div>
 
     <main>
-        <div>
-            <h3>Bienvenidos al REGISTRO de Recepción de Equipos</h3>
+
+        <div class="contenedor-formulario">
+
+            <h1 class="mrt-30">Registrate</h1>
+
+            <div class="contenedor-img-iniciarSesion">
+                <img class="img-iniciarSesion" th:src="@{/imagenes/registro.png}" alt="registro">
+            </div>
+
+
+
+            <form class="formulario mrt-30" th:action="@{/usuario/acceder}" method="post">
+
+                <div class="contenedor-tarjeta">
+                    <div class="tarjeta">
+                        <label class="lab w-100" for="img">Foto: (opcional)</label>
+                        <label for="img" class="inp boton"><img class="w-20" th:src="@{/iconos/felicidad.png}"
+                                alt="emogi"> Subí tu
+                            foto</label>
+                        <input type="file" class="mrt-30" id="img" name="img">
+
+                    </div>
+
+                    <div class="contenedor-tarjeta mrt-30">
+                        <div class="tarjeta">
+                            <label for="contrasena" class="lab"> Contraseña:</label>
+                            <input type="contrasena" class="inp" id="contrasena" name="password"
+                                placeholder="Ingrese su contraseña" required>
+                        </div>
+                    </div>
+
+                    <div class="contenedor-boton mrt-30">
+
+                        <button type="submit" class="boton"> <span class="glyphicon glyphicon-ok"></span>
+                            Ingresar</button>
+
+                    </div>
+                    <div class="mrt-30">
+                        <a class="black" th:href="@{/email/recuperarContrasena}">¿Olvidaste la contraseña?</a>
+                    </div>
+
+            </form>
         </div>
+
     </main>
 
-     <!-- Footer -->
-     <div th:insert="~{usuario/templateUsuario.html::footer}"></div>
+    <!-- Footer -->
+    <div th:insert="~{usuario/templateUsuario.html::footer}"></div>
 </body>
 
 </html>
