--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -26,89 +26,91 @@
 
 
 
-            <form class="formulario mrt-30" th:action="@{/usuario/acceder}" method="post">
-                <!-- Grupo: Usuario -->
-                <div class="formulario__grupo" id="grupo__usuario">
-                    <label for="usuario" class="formulario__label">Usuario</label>
-                    <div class="formulario__grupo-input">
-                        <input type="text" class="formulario__input" name="usuario" id="usuario" placeholder="john123">
-                        <i class="formulario__validacion-estado fas fa-times-circle"></i>
+            <form class="formulario" id="formulario" th:action="@{/usuario/save}" method="post"
+                enctype="multipart/form-data">
+
+                <!-- Grupo: Correo Electronico -->
+                <div class="formulario-grupo" id="grupo-correo">
+                    <label for="correo" class="formulario-label">Correo Electrónico</label>
+                    <div class="formulario-grupo-input">
+                        <input type="email" class="formulario-input" name="correo" id="correo"
+                            placeholder="correo@correo.com">
+                        <i class="formulario-validacion-estado fas fa-times-circle"></i>
                     </div>
-                    <p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener
+                    <p class="formulario-input-error">El correo solo puede contener letras, numeros, puntos, guiones y
+                        guion bajo.</p>
+                </div>
+
+                <!-- Grupo: Usuario -->
+                <div class="formulario-grupo" id="grupo-usuario">
+                    <label for="usuario" class="formulario-label">Nombre Usuario</label>
+                    <div class="formulario-grupo-input">
+                        <input type="text" class="formulario-input" name="usuario" id="usuario"
+                            placeholder="Nombre Usuario">
+                        <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                    </div>
+                    <p class="formulario-input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener
                         numeros, letras y guion bajo.</p>
                 </div>
 
                 <!-- Grupo: Nombre -->
-                <div class="formulario__grupo" id="grupo__nombre">
-                    <label for="nombre" class="formulario__label">Nombre</label>
-                    <div class="formulario__grupo-input">
-                        <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="John Doe">
-                        <i class="formulario__validacion-estado fas fa-times-circle"></i>
+                <div class="formulario-grupo" id="grupo-nombre">
+                    <label for="nombre" class="formulario-label">Nombre</label>
+                    <div class="formulario-grupo-input">
+                        <input type="text" class="formulario-input" name="nombre" id="nombre" placeholder="Nombre">
+                        <i class="formulario-validacion-estado fas fa-times-circle"></i>
                     </div>
-                    <p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener
+                    <p class="formulario-input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener
+                        numeros, letras y guion bajo.</p>
+                </div>
+
+                <!-- Grupo: Apellido -->
+                <div class="formulario-grupo" id="grupo-apellido">
+                    <label for="apellido" class="formulario-label">Apellido</label>
+                    <div class="formulario-grupo-input">
+                        <input type="text" class="formulario-input" name="apellido" id="apellido" placeholder="Apellido">
+                        <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                    </div>
+                    <p class="formulario-input-error">El apellido tiene que ser de 4 a 16 dígitos y solo puede contener
                         numeros, letras y guion bajo.</p>
                 </div>
 
                 <!-- Grupo: Contraseña -->
-                <div class="formulario__grupo" id="grupo__password">
-                    <label for="password" class="formulario__label">Contraseña</label>
-                    <div class="formulario__grupo-input">
-                        <input type="password" class="formulario__input" name="password" id="password">
-                        <i class="formulario__validacion-estado fas fa-times-circle"></i>
+                <div class="formulario-grupo" id="grupo-password">
+                    <label for="password" class="formulario-label">Contraseña</label>
+                    <div class="formulario-grupo-input">
+                        <input type="password" class="formulario-input" name="password" id="password">
+                        <i class="formulario-validacion-estado fas fa-times-circle"></i>
                     </div>
-                    <p class="formulario__input-error">La contraseña tiene que ser de 4 a 12 dígitos.</p>
+                    <p class="formulario-input-error">La contraseña tiene que ser de 4 a 12 dígitos.</p>
                 </div>
 
                 <!-- Grupo: Contraseña 2 -->
-                <div class="formulario__grupo" id="grupo__password2">
-                    <label for="password2" class="formulario__label">Repetir Contraseña</label>
-                    <div class="formulario__grupo-input">
-                        <input type="password" class="formulario__input" name="password2" id="password2">
-                        <i class="formulario__validacion-estado fas fa-times-circle"></i>
+                <div class="formulario-grupo" id="grupo-password2">
+                    <label for="password2" class="formulario-label">Repetir Contraseña</label>
+                    <div class="formulario-grupo-input">
+                        <input type="password" class="formulario-input" name="password2" id="password2">
+                        <i class="formulario-validacion-estado fas fa-times-circle"></i>
                     </div>
-                    <p class="formulario__input-error">Ambas contraseñas deben ser iguales.</p>
-                </div>
-
-                <!-- Grupo: Correo Electronico -->
-                <div class="formulario__grupo" id="grupo__correo">
-                    <label for="correo" class="formulario__label">Correo Electrónico</label>
-                    <div class="formulario__grupo-input">
-                        <input type="email" class="formulario__input" name="correo" id="correo"
-                            placeholder="correo@correo.com">
-                        <i class="formulario__validacion-estado fas fa-times-circle"></i>
-                    </div>
-                    <p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos, guiones y
-                        guion bajo.</p>
-                </div>
-
-                <!-- Grupo: Teléfono -->
-                <div class="formulario__grupo" id="grupo__telefono">
-                    <label for="telefono" class="formulario__label">Teléfono</label>
-                    <div class="formulario__grupo-input">
-                        <input type="text" class="formulario__input" name="telefono" id="telefono"
-                            placeholder="4491234567">
-                        <i class="formulario__validacion-estado fas fa-times-circle"></i>
-                    </div>
-                    <p class="formulario__input-error">El telefono solo puede contener numeros y el maximo son 14
-                        dígitos.</p>
+                    <p class="formulario-input-error">Ambas contraseñas deben ser iguales.</p>
                 </div>
 
                 <!-- Grupo: Terminos y Condiciones -->
-                <div class="formulario__grupo" id="grupo__terminos">
-                    <label class="formulario__label">
-                        <input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
+                <div class="formulario-grupo" id="grupo-terminos">
+                    <label class="formulario-label">
+                        <input class="formulario-checkbox" type="checkbox" name="terminos" id="terminos">
                         Acepto los Terminos y Condiciones
                     </label>
                 </div>
 
-                <div class="formulario__mensaje" id="formulario__mensaje">
+                <div class="formulario-mensaje" id="formulario-mensaje">
                     <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario
                         correctamente. </p>
                 </div>
 
-                <div class="formulario__grupo formulario__grupo-btn-enviar">
-                    <button type="submit" class="formulario__btn">Enviar</button>
-                    <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!
+                <div class="formulario-grupo formulario-grupo-btn-enviar">
+                    <button type="submit" class="formulario-btn">Enviar</button>
+                    <p class="formulario-mensaje-exito" id="formulario-mensaje-exito">Formulario enviado exitosamente!
                     </p>
                 </div>
             </form>
@@ -117,9 +119,9 @@
     </main>
 
     <!-- Footer -->
-    <div th:insert="~{usuario/templateUsuario.html::footer}"></div>
+    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer}"></div>
 
-    <script th:src="@{/scripts/script.js}"></script>
+    <script th:src="@{/scripts/formulario.js}"></script>
     <script src="https://kit.fontawesome.com/80ba51f8fa.js" crossorigin="anonymous"></script>
 </body>
 
