--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -141,6 +141,11 @@ body {
 
 /* Estilos Iniciar Sesión */
 
+.formulario-inicio-sesion {
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
 .contenedor-formulario {
     display: flex;
     flex-wrap: wrap;
@@ -149,13 +154,6 @@ body {
     align-items: center;
 }
 
-/* .formulario {
-    display: flex;
-    flex-wrap: wrap;
-    width: 50%;
-    justify-content: center;
-    align-items: center;
-} */
 
 .contenedor-img-iniciarSesion {
     display: flex;
@@ -170,55 +168,6 @@ body {
     display: flex;
     width: 250px;
     height: 250px;
-}
-
-.contenedor-tarjeta {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 140px;
-    padding: 20px;
-    justify-content: center;
-    align-items: center;
-    background-color: #ffffff;
-    border: 1px solid transparent;
-    border-radius: 10px;
-    box-shadow: 0 0 10px #f4f4f4;
-    color: #000;
-}
-
-.tarjeta {
-    display: flex;
-    justify-content: center;
-    color: black;
-    width: 100%;
-    margin-top: 15px;
-    box-shadow: 10px 10px 10px #a3a4a3;
-    height: 45px;
-    align-items: center;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-/* label-iniciar-sesion*/
-.lab-iniciar-sesion {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    font-size: 20px;
-    width: 100%;
-    box-shadow: 0px 1px 0px 0px #000;
-}
-
-/* input-iniciar-sesion */
-.inp-iniciar-sesion {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 15px;
-    width: 100%;
-    height: 30px;
-    border: none;
 }
 
 .contenedor-boton {
