--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>TODO supply a title</title>
+    <title>Recepción Equipos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
@@ -27,18 +27,18 @@
 
                 <!-- Grupo: Correo Electronico -->
                 <div class="formulario-grupo" id="grupo-correo">
-                    <label for="correo" class="formulario-label">Correo Electrónico</label>
+                    <label for="email" class="formulario-label">Correo Electrónico</label>
                     <div class="formulario-grupo-input">
-                        <input type="email" class="formulario-input" name="correo" id="correo"
+                        <input type="email" class="formulario-input" name="email" id="correo"
                             placeholder="correo@correo.com" required autocomplete="off">
                     </div>
                 </div>
 
                 <!-- Grupo: Contraseña -->
                 <div class="formulario-grupo" id="grupo-password">
-                    <label for="password" class="formulario-label">Contraseña</label>
+                    <label for="contrasena" class="formulario-label">Contraseña</label>
                     <div class="formulario-grupo-input">
-                        <input type="password" class="formulario-input" name="password" id="password" required autocomplete="off">
+                        <input type="password" class="formulario-input" name="contrasena" id="password" required autocomplete="off">
                     </div>
                 </div>
 
