--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>TODO supply a title</title>
+    <title>Recepción Equipos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
@@ -93,14 +93,6 @@
                     </div>
                     <p class="formulario-input-error">Ambas contraseñas deben ser iguales.</p>
                 </div>
-
-                <!-- Grupo: Terminos y Condiciones -->
-                <!-- <div class="formulario-grupo" id="grupo-terminos">
-                    <label class="formulario-label">
-                        <input class="formulario-checkbox" type="checkbox" name="terminos" id="terminos">
-                        Acepto los Terminos y Condiciones
-                    </label>
-                </div> -->
 
                 <div class="formulario-mensaje" id="formulario-mensaje">
                     <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario
