--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -2,10 +2,12 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>TODO supply a title</title>
+    <title>Recepción Equipos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link th:href="@{css/estilos.css}" rel="stylesheet">
 </head>
 
@@ -13,6 +15,7 @@
 
     <!-- Header -->
     <div th:insert="~{usuario/templateUsuario.html::header}" th:if="${sesion==null}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::header-user}" th:unless="${sesion==null}"></div>
 
     <!-- Main -->
     <main>
@@ -65,6 +68,8 @@
 
     <!-- Footer -->
     <div th:insert="~{usuario/templateUsuario.html::footer}"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
