--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -452,6 +452,10 @@ a {
     width: 95%;
 }
 
+.w20 {
+    width: 20px;
+}
+
 .h100 {
     height: 100%;
 }
@@ -492,11 +496,7 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 15px;
-    align-items: center;
-    align-self: center;
 }
 
-.dos-columnas p {
-    align-items: center;
-}
+
 
